change when clicked, mouseenter and mouseleave

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<div appChangetext>hello kitty cats :)</div>
+<div [appChangetext]="animationSpeed">hello kitty cats :)</div><br>
+
+<p [appChangetext]="animationSpeed">Välkommen till vår lilla hörna</p> <br>
