--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,3 +2,11 @@ div{
     text-align: center;
     width: 100%;
 }
+p{
+    text-align: center;
+    width: 100%;
+}
+img{
+    margin: 0 40%;
+    width: 50%;
+}
